# feliscatuskr-discordbot-djmax

./: Cargo.toml  README.md  djmax_songs.csv
migrations/2020-07-28-072159_create_songs/: down.sql  up.sql
src/: db.rs  discord.rs  main.rs
src/db/: models.rs  schema.rs
src/discord/: djmax.rs  general.rs
