[package]
name = "feliscatuskr-discordbot-djmax"
version = "0.1.0"
authors = ["Hansaem Woo <feliscatus@hanyang.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serenity = "0.8"
diesel = { version = "1.4.4", features = ["sqlite"] }
diesel_migrations = "1.4.0"
libsqlite3-sys = { version = "0.18.0", features = ["bundled"] }
